# countdown-conundrum

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  catch.hpp  check_parens.cpp  conundrums.cpp  fast_num.cpp  iter_tools.h  node.cpp  node.h  numbers.cpp  numbers_drop_operator.cpp  numbers_test.cpp  old version.cpp  optimizer.cpp  optimizer.h  printing.hpp  solver.cpp  template_generation.cpp  template_generator.py  test cases  test.cpp  utility.h  vcpkg.json
dictionary/: dictionary.h
src/: conundrums.cpp  fast_num.cpp  generated.h  numbers.cpp  solver.h
src/include/: fast_num.h  node.h
